--- a/djangoProject6/templates/Todo/base.html
+++ b/djangoProject6/templates/Todo/base.html
@@ -7,6 +7,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
           integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
@@ -15,13 +17,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <tittle></tittle>
 
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+
 </head>
 <body>
-    <div class="container">
-        <div class="text-center heading">TO-DO-LIST</div>
-        {% block body %}
-        {% endblock %}
+    <div class="container ">
+        <div class=" mt-5">
+            <div class="display-4 justify-content-center mb-2 d-flex">TO-DO-LIST</div>
+            {% block body %}
+            {% endblock %}
+        </div>
+
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
