new changes final

--- a/djangoProject6/templates/Todo/base.html
+++ b/djangoProject6/templates/Todo/base.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -15,7 +15,7 @@
           crossorigin="anonymous">
     <!-- Font-awesome CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-    <tittle></tittle>
+    <title>TodoApp </title>
 
 
 </head>
