--- a/djangoProject6/templates/Todo/update.html
+++ b/djangoProject6/templates/Todo/update.html
@@ -11,10 +11,10 @@
               <div class="row">
                   <div class="col-10">
                     <label for="id_task">Task:</label>
-                    <input type="text" class="form-control" name="task" value={{ task.task }} maxlength="100" required id="id_task"></p>
+                    <p><input type="text" class="form-control" name="task" value={{ task.task }} maxlength="100" required id="id_task"></p>
                       <div>
-                  <a href="{% url 'index' %}" class="btn btn-info marginr"><- Go back</a>
-                  <button type="submit" class="btn btn-primary">Update</button></a>
+                  <a href="{% url 'index' %}" class="btn btn-info marginr">&lt;- Go back</a>
+                  <button type="submit" class="btn btn-primary">Update</button>
               </div>
                   </div>
                   <div class="col-2 text-center">
